apps/bgd/overlays/bgd/bgd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bgd
  name: bgd
  namespace: bgd1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgd1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bgd1
    spec:
      containers:
      - image: quay.io/rhdevelopers/bgd:1.0.0
        name: bgd1
        resources: {}
---
